        Windows.
      * CMake targets MCPL::MCPL and MCPL::mcpl are now both valid aliases for
        the MCPL library target.
      * Fix bug where MCPL->MCNP5 conversion was encoding the particle type in
        an incorrect manner.
      * Renamed READMEs and INSTALL files to have .md suffix, and removed the
        FILES file since it was annoying to maintain.

v1.9.80 2024-04-14
      * Release candidate number 1 for release 2.0.0 (detailed changelog to be
        added only for release 2.0.0).
      * Change license to the Apache 2.0 license. This license changed was
        agreed to by all contributors.

v1.6.2 2023-06-06
      * Work again with latest numpy by removing usage of deprecated numpy.float
        and numpy.int aliases (Thanks Milan Klausz and Jose Robledo, see also
        github issue #72).

v1.6.1 2022-12-08
      * Fixed mcplexample_pyread so it is able to work without the user setting
        PYTHONPATH (this is still not very robust as it for now assumes that the
        user did not modify the default installation location).
      * Attempt to improve MCPL_ENABLE_ZLIB=FETCH mode by applying correct
        private compilation definitions.

v1.6.0 2022-11-11
      * Updated all MCPL CMake options to have named prefixed with MCPL_ and use
        a more consistent naming scheme (mctools/mcpl#67). For example
        BUILD_EXAMPLES is now instead MCPL_ENABLE_EXAMPLES. See the file
        cmake/modules/mcpl_options.cmake for details.
      * The default behaviour was until now to try to locate ZLIB and let the
        configuration fail if not succesful, unless the old option
        BUILD_WITHZLIB was explicitly set to OFF. The new option
        MCPL_ENABLE_ZLIB is more flexible and supports one of several values:
        IFAVAILABLE, FETCH, USEPREINSTALLED, ALWAYS, OFF, or NEVER.  The default
        value of IFAVAILABLE will try to locate ZLIB, but will simply disable